--- a/core/Makefile
+++ b/core/Makefile
@@ -1362,7 +1362,7 @@ name := $(TARGET_PRODUCT)
 ifeq ($(TARGET_BUILD_TYPE),debug)
   name := $(name)_debug
 endif
-name := $(name)-ota-$(FILE_NAME_TAG)
+name := AOSP-$(shell date +%Y%m%d)-$(TARGET_DEVICE)-$(USER)
 
 INTERNAL_OTA_PACKAGE_TARGET := $(PRODUCT_OUT)/$(name).zip
 
